fix: fix User module types and models
