# src/services/users/controllers/users.controller.ts
@@ -7,16 +7,14 @@ import {
   Put,
   Delete,
   HttpCode,
-  HttpStatus,
-  NotFoundException,
+  BadRequestException,
   UsePipes,
   ValidationPipe,
-  BadRequestException,
 } from '@nestjs/common';
 import { UsersService } from '../services/users.service';
 import { CreateUserDto } from '../dto/create-user.dto';
 import { UpdatePasswordDto } from '../dto/update-password.dto';
-import { IUser } from '../../../interfaces/user.interfaces';
+import { PublicUserDto } from '../dto/public-user.dto';
 import { validate as isUUID } from 'uuid';
 import {
   INVALID_USER_ID,
@@ -34,151 +32,77 @@ import {
 @ApiTags('Users')
 @Controller('user')
 export class UsersController {
-  constructor(private readonly usersService: UsersService) {}
+  constructor(private readonly usersService: UsersService) { }
 
-  /**
-   * Get all users
-   * @returns Array of User objects
-   */
   @Get()
   @ApiOperation({ summary: 'Get all users' })
   @ApiResponse({
     status: 200,
     description: 'List of all users',
-    type: [CreateUserDto],
+    type: [PublicUserDto],
   })
-  async getAllUsers(): Promise<IUser[]> {
+  async getAllUsers(): Promise<PublicUserDto[]> {
     return await this.usersService.getAllUsers();
   }
 
-  /**
-   * Get a user by ID
-   * @param id User UUID
-   * @returns User object
-   */
   @Get(':id')
   @ApiOperation({ summary: 'Get a user by ID' })
   @ApiParam({ name: 'id', description: 'User UUID', format: 'uuid' })
   @ApiResponse({
     status: 200,
     description: 'User found',
-    type: CreateUserDto,
+    type: PublicUserDto,
   })
-  @ApiResponse({
-    status: 400,
-    description: INVALID_USER_ID,
-  })
-  @ApiResponse({
-    status: 404,
-    description: USER_NOT_FOUND,
-  })
-  @UsePipes(new ValidationPipe({ whitelist: true }))
-  async getUserById(@Param('id') id: string): Promise<IUser> {
+  @ApiResponse({ status: 400, description: INVALID_USER_ID })
+  @ApiResponse({ status: 404, description: USER_NOT_FOUND })
+  async getUserById(@Param('id') id: string): Promise<PublicUserDto> {
     if (!isUUID(id)) {
       throw new BadRequestException(INVALID_USER_ID);
     }
-
-    const user = await this.usersService.getUserById(id);
-    if (!user) {
-      throw new NotFoundException(USER_NOT_FOUND);
-    }
-
-    return user;
+    return await this.usersService.getUserById(id);
   }
 
-  /**
-   * Create a new user
-   * @param createUserDto Data to create a user
-   * @returns Created User object
-   */
   @Post()
   @ApiOperation({ summary: 'Create a new user' })
-  @ApiBody({
-    description: 'Data to create a user',
-    type: CreateUserDto,
-  })
-  @ApiResponse({
-    status: 201,
-    description: 'User successfully created',
-    type: CreateUserDto,
-  })
-  @ApiResponse({
-    status: 400,
-    description: 'Invalid data for creating a user',
-  })
+  @ApiBody({ description: 'Data to create a user', type: CreateUserDto })
+  @ApiResponse({ status: 201, description: 'User successfully created', type: PublicUserDto })
+  @ApiResponse({ status: 400, description: 'Invalid data for creating a user' })
   @UsePipes(new ValidationPipe({ whitelist: true }))
-  async createUser(@Body() createUserDto: CreateUserDto): Promise<IUser> {
+  async createUser(@Body() createUserDto: CreateUserDto): Promise<PublicUserDto> {
     return await this.usersService.createUser(createUserDto);
   }
 
-  /**
-   * Update user password
-   * @param id User UUID
-   * @param updatePasswordDto Data to update the password
-   * @returns Updated User object
-   */
   @Put(':id')
   @ApiOperation({ summary: 'Update user password' })
   @ApiParam({ name: 'id', description: 'User UUID', format: 'uuid' })
-  @ApiBody({
-    description: 'Data to update the password',
-    type: UpdatePasswordDto,
-  })
-  @ApiResponse({
-    status: 200,
-    description: 'Password successfully updated',
-    type: CreateUserDto,
-  })
-  @ApiResponse({
-    status: 400,
-    description: INVALID_USER_ID,
-  })
-  @ApiResponse({
-    status: 403,
-    description: WRONG_OLD_PASSWORD,
-  })
-  @ApiResponse({
-    status: 404,
-    description: USER_NOT_FOUND,
-  })
+  @ApiBody({ description: 'Data to update the password', type: UpdatePasswordDto })
+  @ApiResponse({ status: 200, description: 'Password successfully updated', type: PublicUserDto })
+  @ApiResponse({ status: 400, description: INVALID_USER_ID })
+  @ApiResponse({ status: 403, description: WRONG_OLD_PASSWORD })
+  @ApiResponse({ status: 404, description: USER_NOT_FOUND })
   @UsePipes(new ValidationPipe({ whitelist: true }))
   async updateUserPassword(
     @Param('id') id: string,
     @Body() updatePasswordDto: UpdatePasswordDto,
-  ): Promise<IUser> {
+  ): Promise<PublicUserDto> {
     if (!isUUID(id)) {
       throw new BadRequestException(INVALID_USER_ID);
     }
-
     return await this.usersService.updateUserPassword(id, updatePasswordDto);
   }
 
-  /**
-   * Delete a user
-   * @param id User UUID
-   */
   @Delete(':id')
   @ApiOperation({ summary: 'Delete a user' })
   @ApiParam({ name: 'id', description: 'User UUID', format: 'uuid' })
-  @ApiResponse({
-    status: 204,
-    description: 'User successfully deleted',
-  })
-  @ApiResponse({
-    status: 400,
-    description: INVALID_USER_ID,
-  })
-  @ApiResponse({
-    status: 404,
-    description: USER_NOT_FOUND,
-  })
-  @HttpCode(HttpStatus.NO_CONTENT)
+  @ApiResponse({ status: 204, description: 'User successfully deleted' })
+  @ApiResponse({ status: 400, description: INVALID_USER_ID })
+  @ApiResponse({ status: 404, description: USER_NOT_FOUND })
+  @HttpCode(204)
   @UsePipes(new ValidationPipe({ whitelist: true }))
   async deleteUser(@Param('id') id: string): Promise<void> {
     if (!isUUID(id)) {
       throw new BadRequestException(INVALID_USER_ID);
     }
-
     await this.usersService.deleteUser(id);
   }
 }
